simplified & cleaned up

--- a/test/carousel.html
+++ b/test/carousel.html
@@ -6,10 +6,10 @@
 <body>
 	<div id="banner">
 		<div>Hello</div>
-		<div>World!</div>
-		<div>You can slide anything you like</div>
-		<div>in almost any html container</div>
-		<div>and transition it as you want</div>
+		<div class="red">World!</div>
+		<div class="back">You can slide anything you like</div>
+		<div class="up resize">in almost any html container</div>
+		<div class="spacing">and transition it as you want</div>
 		<div>by defining only html and css.</div>
 	</div>
 	<style type="text/css">
@@ -21,7 +21,7 @@
 		    margin: 0;
 		}
 
-		.banner {
+		#banner div {
 		    position: relative;
 		    display: none;
 		    width: 100%;
@@ -33,19 +33,20 @@
 		    margin: 0;
 		}  
 
-		.banner-show,
-		.banner-next,
-		.banner-prev {
+		#banner div.show,
+		#banner div.next,
+		#banner div.prev {
 		    display: block;
 		}
 
-		.banner-next,
-		.banner-prev {
+		#banner div.next,
+		#banner div.prev {
 		    position: absolute;
 		}
 
 		/* add transitions */
-		.banner-show, .banner-prev {
+		#banner div.show, 
+		#banner div.prev {
 	    	transition: .4s all ease;
     		-webkit-transition: 2s all ease;
     		-moz-transition: 2s all ease;
@@ -53,22 +54,51 @@
     	}
 
 		/* next slide from left */
-		.banner-next {
+		#banner div.next {
     		left: -100%;
 		}
 
 		/* previous slide to right */
-		.banner-prev {
+		#banner div.prev {
     		left: 100%;
+		}
+
+		#banner div.red {
+			color: red;
 		}	
+
+		#banner div.back.next {
+			left: 100%;
+		}
+
+		#banner div.back.prev {
+			left: -100%;
+		}
+
+		#banner div.up.next {
+			top: 100%;
+		}
+
+		#banner div.up.prev {
+			top: -100%;
+		}
+
+		#banner div.resize.show {
+			font-size: 2em;
+		}
+
+		#banner div.spacing.next {
+			letter-spacing: 4em;
+		}
+
+
 
 	</style>
 	<script src="../build/build.js"></script>
 	<script>
 		var carousel = require('carousel');
 		
-		var container = document.getElementById('banner');
-		new carousel(container,'banner').start(0,3000);
+		new carousel('banner').start(0,3000);
 
 	</script>
 </body>
