refactored transitions & added .slide class to elements

--- a/test/carousel.html
+++ b/test/carousel.html
@@ -21,7 +21,7 @@
 		    margin: 0;
 		}
 
-		#banner div {
+		#banner div.slide {
 		    position: relative;
 		    display: none;
 		    width: 100%;
