added demo slideshow

--- a/test/carousel.html
+++ b/test/carousel.html
@@ -2,103 +2,90 @@
 <html>
 <head>
 	<title>Carousel test</title>
+	<link rel="stylesheet" type="text/css" href="carousel.css">
 </head>
 <body>
-	<div id="banner">
-		<div>Hello</div>
-		<div class="red">World!</div>
-		<div class="back">You can slide anything you like</div>
-		<div class="up resize">in almost any html container</div>
-		<div class="spacing">and transition it as you want</div>
-		<div>by defining only html and css.</div>
-	</div>
-	<style type="text/css">
-		/* style the banner slide */
-		#banner {
-		    position: relative;
-		    overflow: hidden;
-		    padding: 0;
-		    margin: 0;
-		}
-
-		#banner div.slide {
-		    position: relative;
-		    display: none;
-		    width: 100%;
-		    height: 100%;
-		    top: 0;
-		    left: 0;
-		    list-style-type: none;
-		    padding: 0;
-		    margin: 0;
-		}  
-
-		#banner div.show,
-		#banner div.next,
-		#banner div.prev {
-		    display: block;
-		}
-
-		#banner div.next,
-		#banner div.prev {
-		    position: absolute;
-		}
-
-		/* add transitions */
-		#banner div.show, 
-		#banner div.prev {
-	    	transition: .4s all ease;
-    		-webkit-transition: 2s all ease;
-    		-moz-transition: 2s all ease;
-    		-o-transition: 2s all ease;
-    	}
-
-		/* next slide from left */
-		#banner div.next {
-    		left: -100%;
-		}
-
-		/* previous slide to right */
-		#banner div.prev {
-    		left: 100%;
-		}
-
-		#banner div.red {
-			color: red;
-		}	
-
-		#banner div.back.next {
-			left: 100%;
-		}
-
-		#banner div.back.prev {
-			left: -100%;
-		}
-
-		#banner div.up.next {
-			top: 100%;
-		}
-
-		#banner div.up.prev {
-			top: -100%;
-		}
-
-		#banner div.resize.show {
-			font-size: 2em;
-		}
-
-		#banner div.spacing.next {
-			letter-spacing: 4em;
-		}
-
-
-
-	</style>
+	<div id="slideshow">
+		<ul id="carousel">
+			<li><img src="s1.jpg"><span class="caption">Slide#1</span></li>
+			<li><img src="s2.jpg"><span class="caption">Slide#2</span></li>
+			<li><img src="s3.jpg"><span class="caption">Slide#3</span></li>
+			<li><img src="s4.jpg"><span class="caption">Slide#4</span></li>
+			<li><img src="s5.jpg"><span class="caption">Slide#5</span></li>
+			<li><img src="s6.jpg"><span class="caption">Slide#6</span></li>
+			<li><img src="s7.jpg"><span class="caption">Slide#7</span></li>
+		</ul>
+		<div id="nextButton">&rang;</div>
+		<div id="prevButton">&lang;</div>
+		<div id="nav">
+		</div>
+	</div>	
 	<script src="../build/build.js"></script>
 	<script>
 		var carousel = require('carousel');
+		var nav = document.getElementById('nav');
+
+		var slideshow = new carousel('carousel');
 		
-		new carousel('banner').start(0,3000);
+		var nav_dots = document.createElement('ul');
+
+		var dots = '';
+
+		for(var i = 0; i < slideshow.slides.length; i++){
+			dots+='<li class="dot" id="s' + i +'"></li>\n';
+		}
+
+		nav_dots.innerHTML = dots;
+
+		nav.appendChild(nav_dots);
+		
+		dots = nav.getElementsByTagName('li');
+
+		/* add click handler to dots */
+		for(var i = 0, dot; dot = dots[i]; i++){
+			dot.addEventListener('click', function(event){
+				event = event ? event : window.event;
+
+				var ix = event.target.id.match(/\d/)[0];
+				slideshow.show(ix);
+				event.stopPropagation();
+			});
+		}
+
+		/* add click handler on slide to toggle pause */
+		document.getElementById('slideshow').addEventListener('click',function(event){
+			event = event ? event : window.event;
+			
+			if(slideshow.paused) {
+				slideshow.resume();
+			} else {
+				slideshow.pause();
+			}
+		});
+
+		/* add click handlers to next prev buttons */
+		document.getElementById('nextButton').addEventListener('click',function(event){
+			slideshow.next();
+			event.stopPropagation();
+		});
+
+		document.getElementById('prevButton').addEventListener('click',function(event){
+			slideshow.prev();
+			event.stopPropagation();
+		});			
+
+		slideshow.onChange = function(index,from){
+			
+			if(from !== undefined){
+				dots[from].className = "dot";
+			}
+
+			dots[index].className = "active dot";
+
+			slideshow.transit(index,from);
+		}
+
+		slideshow.start(0,3000);
 
 	</script>
 </body>
